Prepared for code for release:
Edited CMakeLists to allow for the user to set the number of threads to compile with from command line.

Cleaned up code ready for release.

Edited Readme.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.1)
-project(CCCmt) #project name
+project(CCCp) #project name
 set(CMAKE_BUILD_TYPE Release) #force release build
 
-#multithread release stuff
-set (CMAKE_CXX_STANDARD 11) #use C++11, required to use threads
-add_definitions(-DCORECOUNT=4) #set the core count, should be system dependent
+#allow us to use multithreading in the code
+set(CMAKE_CXX_STANDARD 11) #use C++11, required to use threads
 find_package(Threads) #get libraries required for multithreading... WHAT THE HELL GCC THIS IS IN THE STANDARD?!?!?!
+
+#getting number of compute threads from user
+if(${COMPUTE_THREAD_COUNT} STREQUAL "") #check if threads were defined properly
+	
+endif(${COMPUTE_THREAD_COUNT} STREQUAL "")
+add_definitions(-D_COMPUTE_THREAD_COUNT=${COMPUTE_THREAD_COUNT}) #set the core count, should be system dependent
+message("Set to compile with ${COMPUTE_THREAD_COUNT} compute threads!") #print message
 
 #normal stuff
 include_directories(include) #add headers
@@ -19,9 +25,9 @@ find_package(VTK REQUIRED) #add VTK libs
 include(${VTK_USE_FILE})
 
 #generate executable
-add_executable(CCCmt ${SOURCES})
+add_executable(CCCp ${SOURCES})
 
 #link libraries
-target_link_libraries(CCCmt GSL::gsl GSL::gslcblas) #link GSL libs
-target_link_libraries(CCCmt ${VTK_LIBRARIES}) #link VTK libs
-target_link_libraries (CCCmt ${CMAKE_THREAD_LIBS_INIT}) #link thread related libs
+target_link_libraries(CCCp GSL::gsl GSL::gslcblas) #link GSL libs
+target_link_libraries(CCCp ${VTK_LIBRARIES}) #link VTK libs
+target_link_libraries (CCCp ${CMAKE_THREAD_LIBS_INIT}) #link thread related libs
